--- a/config/st_gcn/kinetics-skeleton/train.yaml
+++ b/config/st_gcn/kinetics-skeleton/train.yaml
@@ -13,10 +13,12 @@ test_feeder_args:
   label_path: ./data/Kinetics/kinetics-skeleton/val_label.pkl
 
 # model
-model: net.st_gcn.Model
+model: net.st_gcn.AModel
 model_args:
   in_channels: 3
   num_class: 400
+  num_of_timesteps: 150
+  num_of_vertices: 18
   edge_importance_weighting: True
   graph_args:
     layout: 'openpose'
@@ -24,13 +26,13 @@ model_args:
 
 # training
 device: [0,1,2,3]
-batch_size: 256 
-test_batch_size: 256
+batch_size: 16 
+test_batch_size: 16
 
 #optim
 base_lr: 0.1
 step: [20, 30, 40, 50]
-num_epoch: 60
+num_epoch: 10
 
 
 
